--- a/www/index.html
+++ b/www/index.html
@@ -36,8 +36,8 @@
         <link rel="stylesheet" href="css/index.css">
         <title>Hello World</title>
     </head>
-    <body>
-        <div class="app">
+    <body class="app">
+        <div>
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
