--- a/www/index.html
+++ b/www/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8">
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, please refer to the docs:
-            https://cordova.apache.org/docs/en/latest/
-        Some notes:
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="css/index.css">
-        <title>Hello World</title>
+        <title>Hanami</title>
     </head>
-    <body class="app">
-        <div>
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+    <body>
+        <div class="app">
+            <header>
+                <div class="header-div-contenedor">
+                    <div class="header-div-contenedor-item1"><label>Hanami</label></div>
+                    <div class="header-div-contenedor-item2"><img src="img/logo.png" class="logo"></div>
+                    <div class="header-div-contenedor-item3"><a href="login.html"><label>ingresar</label></a></div>
+                </div>
+            </header>
+            <section>
+                <div class="slider-box">
+                    <ul>
+                        <li>
+                            <img src="img/carrousel1.png">
+                        </li>
+                        <li>
+                            <img src="img/carrousel2.png">
+                        </li>
+                        <li>
+                            <img src="img/carrousel3.png">
+                        </li>
+                    </ul>
+                </div>
+                <div class="titulo-contenedor">
+                    <div class="titulo-item1"><label for="">
+                        Puntua, 
+                        resena, 
+                        y recomienda 
+                        tus peliculas favoritas.</label>
+                    </div>
+                    <div class="titulo-item2"><button>Comienza ahora</button></div>
+                    <div class="titulo-item3"> 
+                        La red social favorita de los amantes del cine. 
+                        Proximamente disponible en PC y iOS.
+                    </div>
+                </div>
+            </section>
         </div>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
