--- a/www/main.html
+++ b/www/main.html
@@ -20,10 +20,11 @@
         </div>
         <div class="slide">
             <ul>
-                <li><a href="#" class="list-item1">Perfil</a></li>
+                <li><a href="./vistas_perfiles/profile_views.html" class="list-item1">Perfil</a></li>
                 <li><a href="#" class="list-item2">Tendencias</a></li>
-                <li><a href="#" class="list-item3">Ai Nepos</a></li>
+                <li><a href="./Nepos/nepos.html" class="list-item3">Ai Nepos</a></li>
                 <li><a href="#" class="list-item4">Ajustes</a></li>
+                <li><a href="./index.html" class="list-item4">Cerra Sesion</a></li>
             </ul>
         </div>
     </div>
