--- a/www/main.html
+++ b/www/main.html
@@ -60,6 +60,5 @@
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
 </body>
-<!-- Chupala xdd -->
-<!-- mamalo xdd -->
+<!-- Hola Chritopher -->
 </html>
