--- a/www/login.html
+++ b/www/login.html
@@ -35,6 +35,6 @@
         <script src="cordova.js"></script>
         <script src="./js/cdn/Jquery.js"></script>
         <script src="js/index.js"></script>
-        <script src="./js/registro/login.js"></script>
+        <script src="./js/sesion/login.js"></script>
     </body>
 </html>
