--- a/www/register.html
+++ b/www/register.html
@@ -57,7 +57,7 @@
     <!-- <script src="cordova.js"></script> -->
     <script src="./js/cdn/Jquery.js"></script>
     <script src="js/index.js"></script>
-    <script src="./js/registro/register.js"></script>
+    <script src="./js/sesion/register.js"></script>
 </body>
 
 </html>
