--- a/www/index.html
+++ b/www/index.html
@@ -52,8 +52,8 @@
     </div>
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
-    <script src="./js/cdn/Jquery.js"></script>
-    <!-- <script src="./js/sesion/sesion_check.js"></script> -->
+    <script src="./library/Jquery/Jquery.js"></script>
+    <script src="./js/sesion/sesion_check.js"></script>
      <script>
         
      </script>
