--- a/www/register.html
+++ b/www/register.html
@@ -55,7 +55,7 @@
         </section>
     </div>
     <!-- <script src="cordova.js"></script> -->
-    <script src="./js/cdn/Jquery.js"></script>
+    <script src="./library/Jquery/Jquery.js"></script>
     <script src="js/index.js"></script>
     <script src="./js/sesion/register.js"></script>
 </body>
