--- a/www/login.html
+++ b/www/login.html
@@ -7,7 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="css/register.css">
-        <meta http-equiv="Content-Security-Policy" content="script-src https://*.000webhostapp.com http://localhost/">
+        <meta http-equiv="Content-Security-Policy" content="script-src https://*.000webhostapp.com http://localhost/ https://cdn.jsdelivr.net">
+        <link rel="stylesheet" href="./library/sweetAlert/sweetalert2.min.css">
+
         <title>Hanami | Ingresar</title>
     </head>
     <body>
@@ -33,8 +35,9 @@
             </section>
         </div>
         <script src="cordova.js"></script>
-        <script src="./js/cdn/Jquery.js"></script>
+        <script src="./library/Jquery/Jquery.js"></script>
+        <script src="./library/sweetAlert/sweetalert2.min.js"></script>
         <script src="js/index.js"></script>
-        <script src="./js/sesion/login.js"></script>
+        <script type="module" src="./js/sesion/login.js"></script>
     </body>
 </html>
