--- a/www/main.html
+++ b/www/main.html
@@ -74,7 +74,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="submit" class="btn btn-primary" id="review-submit" form="review-form">Publicar</button>
+                    <button type="submit" class="btn btn-primary" id="review-submit"
+                        form="review-form">Publicar</button>
                 </div>
             </div>
         </div>
@@ -97,14 +98,49 @@
         </div>
     </section>
 
-    <button type="button" class="btn btn-primary d-flex justify-content-center align-items-center" id="btn-review"
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+        aria-controls="offcanvasRight" id="btn-movie">
+
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+            class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+            <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
+        </svg>
+
+    </button>
+
+    <div class="offcanvas offcanvas-end" style="width: 100%;" tabindex="-1" id="offcanvasRight"
+        aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <button class="btn btn-primary" type="button" id="toggleBottomCanvas" aria-controls="offcanvasBottom">Toggle
+                bottom offcanvas</button>
+
+            <div class="offcanvas offcanvas-bottom" style="height: 50%;" tabindex="-1" id="offcanvasBottom"
+                aria-labelledby="offcanvasBottomLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasBottomLabel">Offcanvas bottom</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body small">
+                    lorem*1000
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <button type="button" class="btn btn-primary d-flex justify-content-center align-items-center" id="btn-review"
         data-bs-toggle="modal" data-bs-target="#form-review" data-bs-whatever="@mdo">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
             class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
             <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
         </svg>
-    </button>
+    </button> -->
 
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
@@ -117,6 +153,8 @@
     <script src="./js/review/search.js"></script>
     <script src="./js/review/review.js"></script>
     <script src="./js/sesion/logout.js"></script>
+
+    <script src="./js/onePage/movieDetails.js"></script>
 </body>
 
 </html>
